# rag

./: .gitignore  pyproject.toml
corpus/: data.py  loader.py
corpus/data/: nepal_advanced.md  sagarmatha2.md  sagarmatha3.md  sagarmatha_1.md
experiments/: _00_similarity.py  _01_fixed_chunk.py  _02_sent_para_chunk.py  _03_recursive_chunking.py  _04_semantic_chunking.py  _05_qdrant.py  _06_baseline_rag.py
implement/: _01_baseline.py
shared/: chunker.py  embedder.py  llm_client.py  qdrant_client.py
