[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "llama-index-core>=0.14.20",
    "llama-index-embeddings-huggingface>=0.7.0",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.0",
    "umap-learn>=0.5.12",
    "unstructured>=0.22.21",
]
